Made conversions from numbers sheets to excel sheets

--- a/Inventory CSVs/Master Parts Table - Numbers Edition.numbers/Metadata/BuildVersionHistory.plist
+++ b/Inventory CSVs/Master Parts Table - Numbers Edition.numbers/Metadata/BuildVersionHistory.plist
@@ -8,5 +8,7 @@
 	<string>G-r1440-14E123</string>
 	<string>M14.4-7043.0.93-4</string>
 	<string>G-r1440-14E123</string>
+	<string>M14.4-7043.0.93-4</string>
+	<string>G-r1440-14E123</string>
 </array>
 </plist>
